@@ -22,13 +22,13 @@ plugins {
     id "org.springframework.boot" version "${spring_boot_version}"
     id "com.google.cloud.tools.jib" version "2.8.0"
     id "com.github.node-gradle.node" version "3.0.1"
-    id "com.diffplug.spotless" version "5.11.0"
+    id "com.diffplug.spotless" version "5.11.1"
     // this allows us to find outdated dependencies via ./gradlew dependencyUpdates
     id "com.github.ben-manes.versions" version "0.38.0"
 }
 
 group = "de.tum.in.www1.artemis"
-version = "4.11.2"
+version = "4.11.3"
 description = "Interactive Learning with Individual Feedback"
 
 sourceCompatibility=15
@@ -61,7 +61,7 @@ spotless {
     java {
         target project.fileTree(project.rootDir) {
             include "**/*.java"
-            exclude "**/src/main/java/de/tum/in/www1/artemis/service/connectors/BambooService.java", "**/src/main/java/de/tum/in/www1/artemis/config/SecurityConfiguration.java", "**/src/test/resources/test-data/repository-export/EncodingISO_8559_1.java", "**/node_modules/**", "**/out/**", "**/repos/**", "**/build/**", "**/src/main/generated/**", "**/src/main/resources/templates/**"
+            exclude "**/src/main/java/de/tum/in/www1/artemis/service/connectors/BambooService.java", "**/src/main/java/de/tum/in/www1/artemis/config/SecurityConfiguration.java", "**/src/main/java/de/tum/in/www1/artemis/config/SAML2Configuration.java", "**/src/test/resources/test-data/repository-export/EncodingISO_8559_1.java", "**/node_modules/**", "**/out/**", "**/repos/**", "**/build/**", "**/src/main/generated/**", "**/src/main/resources/templates/**"
         }
         importOrderFile "artemis-spotless.importorder"
         eclipse().configFile "artemis-spotless-style.xml"
@@ -86,6 +86,7 @@ test {
     }
     testLogging.showStandardStreams = true
     reports.html.enabled = false
+    jvmArgs "--illegal-access=warn"
 }
 
 task integrationTest(type: Test) {
@@ -99,7 +100,7 @@ task integrationTest(type: Test) {
     }
 
     maxHeapSize = "1024m"
-    jvmArgs "-XX:MaxPermSize=512m"
+    jvmArgs "-XX:MaxPermSize=512m --illegal-access=warn"
     reports.html.enabled = false
 }
 
@@ -146,7 +147,7 @@ jacocoTestCoverageVerification {
                 counter = "INSTRUCTION"
                 value = "COVEREDRATIO"
                 // TODO: in the future the following value should become at least 0.90
-                minimum = 0.85
+                minimum = 0.868
             }
             limit {
                 counter = "CLASS"
@@ -217,7 +218,7 @@ dependencies {
     implementation "javax.transaction:javax.transaction-api:1.3"
     implementation "org.hibernate:hibernate-jcache:${hibernate_version}"
     implementation "org.hibernate:hibernate-entitymanager:${hibernate_version}"
-    implementation "org.hibernate.validator:hibernate-validator:6.2.0.Final"
+    implementation "org.hibernate.validator:hibernate-validator:7.0.1.Final"
     implementation "org.liquibase:liquibase-core:4.3.2"
     implementation "org.springframework.boot:spring-boot-loader-tools:${spring_boot_version}"
     implementation "org.springframework.boot:spring-boot-starter-mail:${spring_boot_version}"
@@ -234,13 +235,13 @@ dependencies {
     implementation "org.springframework.boot:spring-boot-starter-thymeleaf:${spring_boot_version}"
 
     implementation "org.springframework.ldap:spring-ldap-core:2.3.3.RELEASE"
-    implementation "org.springframework.data:spring-data-ldap:2.4.6"
+    implementation "org.springframework.data:spring-data-ldap:2.4.7"
 
     implementation "org.springframework.cloud:spring-cloud-starter-netflix-eureka-client:3.0.2"
     implementation "org.springframework.cloud:spring-cloud-starter-config:3.0.3"
     implementation "org.springframework.boot:spring-boot-starter-cloud-connectors:2.2.13.RELEASE"
 
-    implementation "io.netty:netty-all:4.1.60.Final"
+    implementation "io.netty:netty-all:4.1.63.Final"
     implementation "io.projectreactor.netty:reactor-netty:1.0.5"
     implementation "org.springframework:spring-messaging:5.3.5"
 
@@ -249,8 +250,10 @@ dependencies {
     implementation "org.springframework.security:spring-security-web:${spring_security_version}"
     implementation "org.springframework.security:spring-security-messaging:${spring_security_version}"
     implementation "org.springframework.security:spring-security-ldap:${spring_security_version}"
-    implementation "org.xmlbeam:xmlprojector:1.4.18"
+    implementation "org.springframework.security:spring-security-saml2-service-provider:${spring_security_version}"
+    implementation "org.xmlbeam:xmlprojector:1.4.19"
     implementation "io.jsonwebtoken:jjwt-api:0.11.2"
+    implementation "org.bouncycastle:bcprov-jdk15on:1.68"
     runtimeOnly "io.jsonwebtoken:jjwt-impl:0.11.2"
     runtimeOnly "io.jsonwebtoken:jjwt-jackson:0.11.2"
     implementation ("io.springfox:springfox-swagger2:3.0.0") {
@@ -288,7 +291,7 @@ dependencies {
     testImplementation "com.h2database:h2:1.4.200"
     testImplementation "org.awaitility:awaitility:4.0.3"
     testImplementation "org.apache.maven.shared:maven-invoker:3.1.0"
-    testImplementation "org.apache.maven.surefire:surefire-report-parser:2.22.2"
+    testImplementation "org.apache.maven.surefire:surefire-report-parser:3.0.0-M5"
 
     // Lightweight JSON library needed for the internals of the MockRestServiceServer
     testImplementation "org.json:json:20210307"
@@ -339,7 +342,7 @@ tasks.withType(Test) {
 }
 
 wrapper {
-    gradleVersion = "6.8.3"
+    gradleVersion = "7.0-rc-2"
 }
 
 task stage(dependsOn: "bootWar") {
@@ -353,7 +356,7 @@ node {
 
 // Command to execute the JavaDoc checkstyle verification ./gradlew checkstyleMain
 checkstyle {
-    toolVersion "8.41"
+    toolVersion "8.41.1"
     configFile file("${rootDir}/checkstyle.xml")
     checkstyleTest.enabled = false
     maxErrors = 0
